--- a/public/app/styles/css/style.css
+++ b/public/app/styles/css/style.css
@@ -413,9 +413,6 @@ textarea {
 .phone {
   display: none; }
 
-.phone-table {
-  display: block; }
-
 @media only screen and (max-width: 47.9375em) {
   .not-phone {
     display: none; }
@@ -430,6 +427,15 @@ textarea {
 
 .price {
   color: #bc0000; }
+
+.rating {
+  color: #f1c40f; }
+
+.not-rating {
+  opacity: 0.2; }
+
+.qty {
+  width: 40px; }
 
 html {
   box-sizing: border-box; }
@@ -744,45 +750,67 @@ footer {
 /*=======================
     Components
 =========================*/
-#welcome-section h1 {
-  font-family: 'Dosis', sans-serif;
-  margin-bottom: 10px;
-  font-size: 400%;
-  font-weight: 300; }
-  @media only screen and (max-width: 47.9375em) {
-    #welcome-section h1 {
-      font-size: 300%; } }
-
-#welcome-section h3 {
-  font-family: 'Dosis', sans-serif; }
-
-#welcome-section a {
-  margin-right: 10px; }
-
-#welcome-section span {
-  opacity: 0.7; }
-
-#carousel-section {
-  padding: 0 0; }
-
-#carousel {
-  position: relative;
-  width: 80%;
-  box-sizing: border-box;
-  overflow: hidden;
-  margin: 0 auto;
-  border: 1px solid #e7e7e7;
-  margin-bottom: 10px; }
-  @media only screen and (max-width: 47.9375em) {
-    #carousel {
-      width: 100%;
-      height: 230px; } }
-  @media only screen and (min-width: 48em) {
-    #carousel {
-      height: 280px; } }
-  @media only screen and (min-width: 62em) {
-    #carousel {
-      height: 330px; } }
+#welcome-section {
+  min-height: 82.3vh;
+  padding-bottom: 0; }
+  #welcome-section h1 {
+    font-family: 'Dosis', sans-serif;
+    margin-bottom: 10px;
+    font-size: 400%;
+    font-weight: 300; }
+    @media only screen and (max-width: 47.9375em) {
+      #welcome-section h1 {
+        font-size: 300%; } }
+  #welcome-section h3 {
+    font-family: 'Dosis', sans-serif; }
+  #welcome-section a {
+    margin-right: 10px; }
+  #welcome-section span {
+    opacity: 0.7; }
+  #welcome-section #carousel {
+    position: relative;
+    width: 80%;
+    box-sizing: border-box;
+    overflow: hidden;
+    margin: 20px auto;
+    border: 1px solid #e7e7e7;
+    margin-bottom: 10px; }
+    @media only screen and (max-width: 47.9375em) {
+      #welcome-section #carousel {
+        width: 100%;
+        height: 230px; } }
+    @media only screen and (min-width: 48em) {
+      #welcome-section #carousel {
+        height: 280px; } }
+    @media only screen and (min-width: 62em) {
+      #welcome-section #carousel {
+        height: 330px; } }
+  #welcome-section #back, #welcome-section #next {
+    position: absolute;
+    top: 35.7%;
+    font-size: 500%;
+    cursor: pointer; }
+    @media only screen and (max-width: 47.9375em) {
+      #welcome-section #back, #welcome-section #next {
+        font-size: 300%; } }
+  #welcome-section #back {
+    left: 20px; }
+  #welcome-section #next {
+    right: 20px; }
+  #welcome-section .priceNname {
+    position: absolute;
+    top: 70%;
+    left: 82%; }
+    #welcome-section .priceNname .fig-name, #welcome-section .priceNname .fig-price {
+      color: #545454; }
+      @media only screen and (min-width: 48em) {
+        #welcome-section .priceNname .fig-name, #welcome-section .priceNname .fig-price {
+          font-size: 120%; } }
+      @media only screen and (min-width: 62em) {
+        #welcome-section .priceNname .fig-name, #welcome-section .priceNname .fig-price {
+          font-size: 150%; } }
+    #welcome-section .priceNname .fig-price {
+      color: #bc0000; }
 
 figure {
   display: none;
@@ -805,36 +833,6 @@ figure {
     figure img {
       width: 300px;
       height: 300px; } }
-
-#back, #next {
-  position: absolute;
-  top: 35.7%;
-  font-size: 500%;
-  cursor: pointer; }
-  @media only screen and (max-width: 47.9375em) {
-    #back, #next {
-      font-size: 300%; } }
-
-#back {
-  left: 20px; }
-
-#next {
-  right: 20px; }
-
-.priceNname {
-  position: absolute;
-  top: 70%;
-  left: 82%; }
-  .priceNname .fig-name, .priceNname .fig-price {
-    color: #545454; }
-    @media only screen and (min-width: 48em) {
-      .priceNname .fig-name, .priceNname .fig-price {
-        font-size: 120%; } }
-    @media only screen and (min-width: 62em) {
-      .priceNname .fig-name, .priceNname .fig-price {
-        font-size: 150%; } }
-  .priceNname .fig-price {
-    color: #bc0000; }
 
 #shop-section {
   min-height: 82.3vh;
@@ -918,8 +916,6 @@ figure {
   #cart-section th, #cart-section td {
     padding: 10px;
     text-align: left; }
-  #cart-section #qty {
-    width: 40px; }
   #cart-section .delete {
     font-size: 100%;
     cursor: pointer;
@@ -949,3 +945,32 @@ figure {
         padding: 20px 0 15px 0; } }
   #cart-section [type="submit"] {
     cursor: pointer; }
+  #cart-section .empty-cart {
+    margin: 15%;
+    text-align: center; }
+    #cart-section .empty-cart .cart-svg {
+      font-size: 700%; }
+
+#product-section {
+  min-height: 82.3vh; }
+  #product-section .img-div #img {
+    margin: 10% auto;
+    text-align: center; }
+  #product-section .img-div img {
+    max-width: 100%;
+    height: 300px; }
+  #product-section .about-product {
+    padding: 3%; }
+    @media only screen and (max-width: 47.9375em) {
+      #product-section .about-product {
+        text-align: center; } }
+    #product-section .about-product h1 {
+      margin-top: 20px; }
+    #product-section .about-product #rating {
+      margin-bottom: 20px; }
+    #product-section .about-product .price {
+      font-size: 200%;
+      font-weight: 400;
+      margin-bottom: 20px; }
+    #product-section .about-product a {
+      margin-top: 20px; }
