--- a/public/app/styles/scss/components/home.scss
+++ b/public/app/styles/scss/components/home.scss
@@ -2,6 +2,8 @@
 
 
 #welcome-section {
+    min-height: 82.3vh;
+    padding-bottom: 0;
     h1 {
         font-family: 'Dosis', sans-serif;
         margin-bottom: 10px;
@@ -21,30 +23,72 @@
     span {
         opacity: 0.7;
     }
-}
-
-#carousel-section {
-    padding: 0 0;
-}
-
-#carousel {
-    position: relative;
-    width: 80%;
-    @include extra-small-only {
-        width: 100%;
-        height: 230px;
+    #carousel {
+        position: relative;
+        width: 80%;
+        @include extra-small-only {
+            width: 100%;
+            height: 230px;
+        }
+        @include small-and-above {
+            height: 280px;
+        }
+        @include medium-and-above {
+            height: 330px;
+        }
+        box-sizing: border-box;
+        overflow: hidden;
+        margin: 20px auto;
+        border: 1px solid $mobile-nav-border;
+        margin-bottom: 10px;
     }
-    @include small-and-above {
-        height: 280px;
+    
+    
+    
+    %arrow-position {
+        position: absolute;
+        top: 35.7%;
+        font-size: 500%;
+        cursor: pointer;
+        @include extra-small-only {
+            font-size: 300%;
+        }
     }
-    @include medium-and-above {
-        height: 330px;
+    
+    #back {
+        @extend %arrow-position;
+        left: 20px;
     }
-    box-sizing: border-box;
-    overflow: hidden;
-    margin: 0 auto;
-    border: 1px solid $mobile-nav-border;
-    margin-bottom: 10px;
+    
+    #next {
+        @extend %arrow-position;
+        right: 20px;
+    }
+    
+    .priceNname {
+        position: absolute;
+        top: 70%;
+        left: 82%;
+        // @include small-and-above {
+        //     right: -20%;
+        // }
+        // @include medium-and-above {
+        //     right: -30%;
+        // }
+        .fig-name {
+            @include small-and-above {
+                font-size: 120%;
+            }
+            @include medium-and-above {
+                font-size: 150%;
+            }
+            color: $text-color;
+        }
+        .fig-price {
+            color: $cart-red;
+            @extend .fig-name;
+        }
+    }
 }
 
 figure {
@@ -69,50 +113,5 @@ figure {
             width: 300px;
             height: 300px;
         }
-    }
-}
-
-%arrow-position {
-    position: absolute;
-    top: 35.7%;
-    font-size: 500%;
-    cursor: pointer;
-    @include extra-small-only {
-        font-size: 300%;
-    }
-}
-
-#back {
-    @extend %arrow-position;
-    left: 20px;
-}
-
-#next {
-    @extend %arrow-position;
-    right: 20px;
-}
-
-.priceNname {
-    position: absolute;
-    top: 70%;
-    left: 82%;
-    // @include small-and-above {
-    //     right: -20%;
-    // }
-    // @include medium-and-above {
-    //     right: -30%;
-    // }
-    .fig-name {
-        @include small-and-above {
-            font-size: 120%;
-        }
-        @include medium-and-above {
-            font-size: 150%;
-        }
-        color: $text-color;
-    }
-    .fig-price {
-        color: $cart-red;
-        @extend .fig-name;
     }
 }
