--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h1>Welcome to Grocery Cloud</h1>
         <h3>Home to the best groceries. It dosen't get any better than this</h3>
-        <a href="/shopping" class="btn"><i class="fas fa-shopping-cart"></i>&nbsp;&nbsp;Shop All</a><span><input type="checkbox" name="toggle-carousel" id="toggle-carousel">&nbsp;Toggle slide show</span>
+        <a href="/shopping" class="btn"><i class="fas fa-shopping-cart"></i>&nbsp;&nbsp;Shop All</a><span id="toggle"><input type="checkbox" name="toggle-carousel" id="toggle-carousel">&nbsp;Toggle slide show</span>
     </div>
 
 <carousel-directive></carousel-directive>
