--- a/public/app/styles/css/style.css
+++ b/public/app/styles/css/style.css
@@ -1018,7 +1018,7 @@ figure {
     padding: 50px 20px; }
     @media only screen and (max-width: 47.9375em) {
       #about-section .section {
-        padding: 30px 20px; } }
+        padding: 30px 0; } }
     #about-section .section h2 {
       text-align: center;
       font-size: 200%;
@@ -1034,6 +1034,9 @@ figure {
       width: 80%;
       margin: 40px auto;
       line-height: 2; }
+      @media only screen and (max-width: 47.9375em) {
+        #about-section .section p {
+          width: 100%; } }
   #about-section .row {
     margin: 50px 0 20px 0; }
   #about-section [class*=sm] {
