--- a/public/app/styles/scss/components/about.scss
+++ b/public/app/styles/scss/components/about.scss
@@ -45,7 +45,7 @@
     .section {
         padding: 50px 20px;
         @include extra-small-only {
-            padding: 30px 20px;
+            padding: 30px 0;
         }
         h2 {
             text-align: center;
@@ -64,6 +64,9 @@
             width: 80%;
             margin: 40px auto;
             line-height: 2;
+            @include extra-small-only {
+                width: 100%;
+            }
         }
     }
     .row {
