--- a/public/app/views/directiveViews/top.html
+++ b/public/app/views/directiveViews/top.html
@@ -1,2 +1,2 @@
 
-<a href="" id="scrollToTop"><i class="fas fa-angle-up"></i></a>
+<a href="" class="scrollToTop"><i class="fas fa-angle-up"></i></a>
