--- a/public/app/styles/css/style.css
+++ b/public/app/styles/css/style.css
@@ -1062,6 +1062,9 @@ figure {
     width: 50px;
     border-bottom: 2px solid #2980b9;
     margin: 10px auto; }
+  @media only screen and (max-width: 47.9375em) {
+    #contact-section h2 {
+      margin-top: 10px; } }
 
 #contact-section p {
   text-align: center;
