--- a/app/views/shop.html
+++ b/app/views/shop.html
@@ -50,7 +50,7 @@
                                     </a>
                                 </div>
                                 <p  class="name"><a href="#" ng-click="shop.redirect(product['name'])">{{product['name']}}</a></p>
-                                <p class="price">&#8358;{{product['price']}}</p>
+                                <p class="price">${{product['price'].toFixed(2)}}</p>
                                 <a href="#" class="btn-ghost" ng-click="shop.addToCart(product)"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add To Cart</a>
                             </div>
                         </div>
