--- a/app/views/directiveViews/carousel.html
+++ b/app/views/directiveViews/carousel.html
@@ -5,7 +5,7 @@
                 <a href="#"  ng-click="redirect(home.products[0]['name'])">
                     <img src="{{home.products[0]['imagelink']}}">
                     <div class="priceNname not-phone">
-                        <span class="fig-price">&#8358;{{(home.products[0]['price'] * 350).toFixed(0)}}</span><br>
+                        <span class="fig-price">${{(home.products[0]['price']).toFixed(2)}}</span><br>
                         <span class="fig-name">{{home.products[0]['name']}}</span>
                     </div>
                 </a>
@@ -14,7 +14,7 @@
                 <a href="#"  ng-click="redirect(home.products[1]['name'])">
                     <img src="{{home.products[1]['imagelink']}}">
                     <div class="priceNname not-phone">
-                        <span class="fig-price">&#8358;{{(home.products[1]['price'] * 350).toFixed(0)}}</span><br>
+                        <span class="fig-price">${{(home.products[1]['price']).toFixed(2)}}</span><br>
                         <span class="fig-name">{{home.products[1]['name']}}</span>
                     </div>
                 </a>
@@ -23,7 +23,7 @@
                 <a href="#"  ng-click="redirect(home.products[2]['name'])">
                     <img src="{{home.products[2]['imagelink']}}">
                     <div class="priceNname not-phone">
-                        <span class="fig-price">&#8358;{{(home.products[2]['price'] * 350).toFixed(0)}}</span><br>
+                        <span class="fig-price">${{(home.products[2]['price']).toFixed(2)}}</span><br>
                         <span class="fig-name">{{home.products[2]['name']}}</span>
                     </div>
                 </a>
@@ -32,7 +32,7 @@
                 <a href="#"  ng-click="redirect(home.products[3]['name'])">
                     <img src="{{home.products[3]['imagelink']}}">
                     <div class="priceNname not-phone">
-                        <span class="fig-price">&#8358;{{(home.products[3]['price'] * 350).toFixed(0)}}</span><br>
+                        <span class="fig-price">${{(home.products[3]['price']).toFixed(2)}}</span><br>
                         <span class="fig-name">{{home.products[3]['name']}}</span>
                     </div>
                 </a>
