--- a/app/views/product.html
+++ b/app/views/product.html
@@ -19,7 +19,7 @@
                     </span>
                 </div>
                 <p class="stock">In Stock: {{product.product['stock']}}</p>
-                <p class="price">&#8358;{{product.product['price']}}</p>
+                <p class="price">${{product.product['price']}}</p>
                 <p class="description">{{product.product['description']}}</p>
                 <div>
                     <label>Qty:</label>&nbsp;&nbsp;
